--- a/string/格式化字符串.md
+++ b/string/格式化字符串.md
@@ -18,11 +18,8 @@
 | %% | 等同于一个 %
 
 > 占位符与类型码（s，r，d……）之间可以添加格式语法
-
-<br/>
-
-1. `-` ： 左对齐
-2. `+` ： 显示正号
-3. `0` ： 补 0
-4. 宽度（适用于整数）
-5. 宽度.精度（适用于整数或浮点数）
+> 1. `-` ： 左对齐
+> 2. `+` ： 显示正号
+> 3. `0` ： 补 0
+> 4. 宽度（适用于整数）
+> 5. 宽度.精度（适用于整数或浮点数）
