1. 修改md文件样式

--- a/string/格式化字符串.md
+++ b/string/格式化字符串.md
@@ -18,8 +18,17 @@
 | %% | 等同于一个 %
 
 > 占位符与类型码（s，r，d……）之间可以添加格式语法
-> 1. `-` ： 左对齐
+> 1. `-` ： 左对齐（需要配合类型码前的数字使用，要不然没有效果）
 > 2. `+` ： 显示正号
-> 3. `0` ： 补 0
+> 3. `0` ： 补 0（需要配合类型码前的数字使用，要不然没有效果）
 > 4. 宽度（适用于整数）
 > 5. 宽度.精度（适用于整数或浮点数）
+
+**注意：**
+
+格式化字符串中，有时候会有多个占位符的情况，比如：以某个宽度输出字符串，这个宽度是一个变量，这时，就需要分两步来完成格式化字符串的输出。
+
+```python
+fmr = '%%%ds' % width
+print(fm, string)
+```
